# body-tracker-9000

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json
src/: components.rs  main.rs  routes.rs
src/components/: views.rs
src/components/partials/: wrapper.rs
src/components/views/: add_entry.rs  home.rs
