[package]
name = "body-tracker-9000"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
rusqlite = { version = "0.38.0", features = ["bundled"], optional = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "rusqlite"]
