[package]
name = "body-tracker-9000"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "rusqlite"]
